# whoami

./: .gitignore  LICENSE  README.md  docker-compose.yml  migrate.py  pyproject.toml  run.py  whoami.db
dockerfiles/front/: Dockerfile
dockerfiles/whoami/: Dockerfile
front/: angular.json  package-lock.json  package.json
front/src/: index.html
front/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  user.ts  whoami.service.ts
front/src/app/footer/: footer.component.ts
front/src/app/home/: home.component.ts
front/src/app/toolbar/: toolbar.component.ts
front/src/environments/: environment.prod.ts  environment.ts
migrations/: __init__.py  create_blogs_table.py  create_users_table.py
whoami/: __init__.py  app.py  auth.py  cache.py  config.py  db.py
whoami/blog/: __init__.py  private.py  public.py
whoami/user/: __init__.py  private.py  public.py
