[tool.poetry]
name = "whoami"
version = "0.1.0"
description = "personal website"
authors = ["Calvin Spring <calvin@cardiologs.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.4"
uvicorn = "^0.18.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pylint = "^2.15.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
